--- a/pizzaria/package.json
+++ b/pizzaria/package.json
@@ -4,7 +4,7 @@
   "description": "Sistema para pizzarias delivery",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@fnando/cpf": "^1.0.1",
+    "ejs": "^3.1.3",
     "express": "^4.17.1"
   },
   "devDependencies": {
